--- a/composer.json
+++ b/composer.json
@@ -9,12 +9,19 @@
 		"uk-locale"
 	],
 	"license": "MIT",
+	"authors": [
+		{
+			"name": "Denys Nosov",
+			"email": "denys@joomla-ua.org",
+			"homepage": "https://community.joomla-ua.org/"
+		}
+	],
 	"support": {
 		"issues": "https://github.com/flarum-lang/ukrainian/issues",
 		"source": "https://github.com/flarum-lang/ukrainian"
 	},
 	"require": {
-		"flarum/core": "^1.4"
+		"flarum/core": "^1.3"
 	},
 	"minimum-stability": "dev",
 	"prefer-stable": true,
@@ -36,7 +43,7 @@
 			"title": "Українська"
 		},
 		"extiverse": {
-			"discuss": ""
+			"discuss": "https://discuss.flarum.org/d/31921"
 		}
 	}
 }
